cmake_minimum_required(VERSION 3.20)
project(algorithm_note LANGUAGES CXX)

set(CMAKE_CXX_STANDARD          11    CACHE INTERNAL "")
set(CMAKE_CXX_STANDARD_REQUIRED ON    CACHE INTERNAL "")
set(CMAKE_BUILD_TYPE            Debug CACHE INTERNAL "")

add_subdirectory(ch03_simulation)
#add_subdirectory(ch04_algorithm_beginning)
