project(ch03_simulation)

# 简单模拟
add_executable(PATB1001 PATB1001.cc) # 害死人不偿命的(3n+1)猜想 [easy]
add_executable(PATB1032 PATB1032.cc) # 挖掘机技术哪家强 [easy]

# 查找元素
# codeup 1934

# 图形输出
add_executable(PATB1036 PATB1036.cc) # 跟奥巴马一起编程 [easy]

# 日期处理
# codeup 1928

# 进制转换
add_executable(PATB1022 PATB1022.cc) # D 进制的 A + B [easy]

# 字符串
# codeup 5901
add_executable(PATB1009 PATB1009.cc) # 说反话 [easy]