project(dp)

# 买卖股票
add_executable(0121 0121_best_time_to_buy_and_sell_stock.cc)                      # 单次购买
add_executable(0122 0122_best_time_to_buy_and_sell_stock_ii.cc)                   # 多次购买
add_executable(0714 0714_best_time_to_buy_and_sell_stock_with_transaction_fee.cc) # 多次购买含手续费
add_executable(0123 0123_best_time_to_buy_and_sell_stock_iii.cc)                  # 最多二次购买
add_executable(0188 0188_best_time_to_buy_and_sell_stock_iv.cc)                   # 最对多k次购买

