project(exercise)

#add_executable(0297 05_bitree/0297_serialize_and_deserialize_binary_tree.cc) # 二叉树序列化

add_executable(0700 07_bst/0700_search_in_a_binary_search_tree.cc)   # BST 搜索
add_executable(0701 07_bst/0701_insert_into_a_binary_search_tree.cc) # BST 插入
add_executable(0450 07_bst/0450_delete_node_in_a_bst.cc)             # BST 删除

add_executable(1382 07_bst/1382_balance_a_binary_search_tree.cc)     # AVL 平衡化
add_executable(0295 07_bst/0295_find_median_from_data_stream.cc)     # AVL 插入
add_executable(0110 07_bst/0110_balanced_binary_tree.cc)             # AVL 判断平衡

