project(array)

add_executable(1491 1491_average_salary_excluding_the_minimum_and_maximum_salary.cc)
add_executable(1822 1822_sign_of_the_product_of_an_array.cc)

add_executable(1572 1572_matrix_diagonal_sum.cc)
#2133. Check if Every Row and Column Contains All Numbers
#2319. Check if Matrix Is X-Matrix
# (ii, jj, 0) x = (jj, -ii, 0)
# (0,  0,  1)
# x1, y1, z1, x1
# x2, y2, z2, x2

