project(array)

add_executable(1491 1491_average_salary_excluding_the_minimum_and_maximum_salary.cc)
add_executable(1822 1822_sign_of_the_product_of_an_array.cc)

add_executable(1572 1572_matrix_diagonal_sum.cc)
#2133. Check if Every Row and Column Contains All Numbers
#2319. Check if Matrix Is X-Matrix
# (ii, jj, 0) x = (jj, -ii, 0)
# (0,  0,  1)
# x1, y1, z1, x1
# x2, y2, z2, x2

add_executable(1351 1351_count_negative_numbers_in_a_sorted_matrix.cc)         #(简单题 模拟)
add_executable(1802 1802_maximum_value_at_a_given_index_in_a_bounded_array.cc) #(中等题 二分+等差数列)
#1521. Find a Value of a Mysterious Function Closest to Target
#2340. Minimum Adjacent Swaps to Make a Valid Array
#2259. Remove Digit From Number to Maximize Result
add_executable(1146 1146_snapshot_array.cc) #(中等题 二分+更改记录)
#1552. Magnetic Force Between Two Balls
#952. Largest Component Size by Common Factor
#2301. Match Substring After Replacement

add_executable(2352 2352_equal_row_and_column_pairs.cc)
add_executable(2462 2462_total_cost_to_hire_k_workers.cc) # (中等题 堆+双指针)
