project(bits)

add_executable(0338 0338_counting_bits.cc)
add_executable(0191 0191_number_of_1_bits.cc)
add_executable(0231 0231_power_of_two.cc)
add_executable(0326 0326_power_of_three.cc)
add_executable(0342 0342_power_of_four.cc)


#Check if Number is a Sum of Powers of Three
#Reverse Bits
#Binary Watch
#Hamming Distance
#Binary Number with Alternating Bits
#Prime Number of Set Bits in Binary Representation