project(graph)

add_executable(1557 1557_minimum_number_of_vertices_to_reach_all_nodes.cc) # 简单题(入度, 出度)
add_executable(0997 0997_find_the_town_judge.cc)                           # 简单题(入度, 出度)

#1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree
#2077. Paths in Maze That Lead to Same Room
#1761. Minimum Degree of a Connected Trio in a Graph