project(graph)

add_executable(1557 1557_minimum_number_of_vertices_to_reach_all_nodes.cc) # 简单题(入度, 出度)
add_executable(0997 0997_find_the_town_judge.cc)                           # 简单题(入度, 出度)
#1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree
#2077. Paths in Maze That Lead to Same Room
#1761. Minimum Degree of a Connected Trio in a Graph
add_executable(0785 0785_is_graph_bipartite.cc)                            # 简单题(BFS)
add_executable(0886 0886_possible_bipartition.cc)                          # 简单题(BFS)
#0210. Course Schedule II
#1632. Rank Transform of a Matrix
#1740. Find Distance in a Binary Tree
add_executable(0399 0399_evaluate_division.cc)                             # 难题(DFS)

add_executable(0934 0934_shortest_bridge.cc)                               # 中等题(DFS     找连通分量)
add_executable(0200 0200_number_of_islands.cc)                             # 简单题(BFS&DFS 找连通分量)
#1072. Flip Columns For Maximum Number of Equal Rows
#2510. Check if There is a Path With Equal Number of 0's And 1's
#417. Pacific Atlantic Water Flow

add_executable(2101 2101_detonate_the_maximum_bombs.cc)                    # 中等题(BFS&DFS 求连通分量规模)
add_executable(0547 0547_number_of_provinces.cc)                           # 中等题(DFS 求连通分量规模)
#323. Number of Connected Components in an Undirected Graph
#657. Robot Return to Origin
#734. Sentence Similarity
#Max Area of Island
#Rotting Oranges
#Minesweeper

add_executable(1514 1514_path_with_maximum_probability.cc)                 # 单源最短路径(dijkstra/spf/bf)

