project(hash)

# 字符出现次数 问题组合
#add_executable(0242 0242_valid_anagram.cpp)
#add_executable(0383 0383_ransom_note.cpp)
#add_executable(0049 0049_group_anagrams.cpp)

# sum 问题组合
#add_executable(0001 0001_two_sum.cpp)
#add_executable(0015 0015_three_sum.cpp)

# pair 问题
add_executable(1512 1512_number_of_good_pairs.cc)
add_executable(1814 1814_count_nice_pairs_in_an_array.cc)
#2197. Replace Non-Coprime Numbers in Array
#2001. Number of Pairs of Interchangeable Rectangles