project(hash)

# 字符出现次数 问题组合
#add_executable(0242 0242_valid_anagram.cpp)
#add_executable(0383 0383_ransom_note.cpp)
#add_executable(0049 0049_group_anagrams.cpp)

# sum 问题组合
#add_executable(0001 0001_two_sum.cpp)
#add_executable(0015 0015_three_sum.cpp)

# pair 问题
add_executable(1512 1512_number_of_good_pairs.cc)
add_executable(1814 1814_count_nice_pairs_in_an_array.cc)
#2197. Replace Non-Coprime Numbers in Array
#2001. Number of Pairs of Interchangeable Rectangles

add_executable(2215 2215_find_the_difference_of_two_arrays.cc) # 简单题(哈希 类似求交集, 多解)
add_executable(1396 1396_design_underground_system.cc)         # 简单题(哈希表， 存在 map<pair, value> 问题*)
#Design Bitset

add_executable(0146 0146_lru_cache.cc)                         # M()
