project(heap)

add_executable(0347 0347_top_k_frequent_elements.cc)          # 简单题(优先队列/堆)
add_executable(0703 0703_kth_largest_element_in_a_stream.cc)  # 简单题(优先队列/堆)
add_executable(0215 0215_kth_largest_element_in_an_array.cc)  # 简单题(优先队列/堆)
#Find the Kth Largest Integer in the Array
#Wiggle Sort II
#Third Maximum Number
#K Closest Points to Origin
#Find Subsequence of Length K With the Largest Sum
#K Highest Ranked Items Within a Price Range

add_executable(2542 2542_maximum_subsequence_score.cc)        # 中等题(优先队列/堆)
add_executable(1383 1383_maximum_performance_of_a_team.cc)
#IPO
#Minimum Cost to Hire K Workers


