project(linklist)

# set from https://programmercarl.com
add_executable(0203 0203_remove_linked_list_elements.cc) # easy
add_executable(0707 0707_design_linked_list.cc)          # medium
add_executable(0206 0206_reverse_linked_list.cc)         # easy
add_executable(0092 0092_reverse_linked_list_ii.cc)      # medium
#add_executable(0024 0024_swap_nodes_in_pairs.cpp)
#Reverse Nodes in k-Group - https://leetcode.com/problems/reverse-nodes-in-k-group/


#add_executable(0002 0002_Add_Two_Numbers.cpp)
#add_executable(0019 0019_remove_nth_node_from_end_of_list.cpp)
#add_executable(0160 0160_intersection_of_two_linked_lists.cpp)
#add_executable(0142 0142_linked_list_cycle_II.cpp)

#Binary Tree Upside Down Medium
#Palindrome Linked List Easy
#Reverse Nodes in Even Length Groups Medium
#Maximum Twin Sum of a Linked List Medium
#Merge Two Sorted Lists
#Merge k Sorted Lists
#Rotate List
#Remove Duplicates from Sorted List II
#83 | 86 | 92 | 206 | 234 | 328 | 725 | 876 | 1290 | 1669 | 1721 | 2058
