project(linklist)

# set from https://programmercarl.com
add_executable(0203 0203_remove_linked_list_elements.cc)
add_executable(0707 0707_design_linked_list.cc)
add_executable(0206 0206_reverse_linked_list.cc)
add_executable(0092 0092_reverse_linked_list_ii.cc)
add_executable(0025 0025_reverse_nodes_in_k_group.cc)
add_executable(0019 0019_remove_nth_node_from_end_of_list.cc)
add_executable(0160 0160_intersection_of_two_linked_lists.cc)
add_executable(0141 0141_linked_list_cycle.cc)
add_executable(0142 0142_linked_list_cycle_II.cc)

add_executable(1721 1721_swapping_nodes_in_a_linked_List.cc)   # 简单题 (倒数第 k 个值)
add_executable(2130 2130_maximum_twin_sum_of_a_linked_list.cc) # 简单题 (转置)

# 1850 0382 0942



#add_executable(0002 0002_Add_Two_Numbers.cpp)

#Binary Tree Upside Down Medium
#Palindrome Linked List Easy
#Reverse Nodes in Even Length Groups Medium
#Maximum Twin Sum of a Linked List Medium
#Merge Two Sorted Lists
#Merge k Sorted Lists
#Rotate List
#Remove Duplicates from Sorted List II
#83 | 86 | 92 | 206 | 234 | 328 | 725 | 876 | 1290 | 1669 | 1721 | 2058
