project(search)

# set from https://programmercarl.com
add_executable(0704 0704_binary_search.cc)
add_executable(0035 0035_search_insert_position.cc)
add_executable(0034 0034_find_first_and_last_position_of_element_in_sorted_array.cc)
add_executable(0069 0069_sqrtx.cc)
add_executable(0367 0367_valid_perfect_square.cc)

add_executable(2448 2448_minimum_cost_to_make_array_equal.cc) #难题(二分/数学证明)
#462. Minimum Moves to Equal Array Elements II
#1960. Maximum Product of the Length of Two Palindromic Substrings
#2335. Minimum Amount of Time to Fill Cups
