project(slide_window)

add_executable(1456 1456_maximum_number_of_vowels_in_a_substring_of_given_length.cc) #简单题(滑动窗口)
#2271. Maximum White Tiles Covered by a Carpet
#2379. Minimum Recolors to Get K Consecutive Black Blocks
#2414. Length of the Longest Alphabetical Continuous Substring


add_executable(0209 0209_minimum_size_subarray_sum.cc)
add_executable(0904 0904_fruit_into_baskets.cc)
add_executable(0076 0076_minimum_window_substring.cc) #