project(stack)

add_executable(0225 0225_implement_stack_using_queues.cc)
add_executable(0232 0232_implement_queue_using_stacks.cc)
add_executable(0020 0020_valid_parentheses.cc)
add_executable(1047 1047_remove_all_adjacent_duplicates_in_string.cc)
add_executable(1209 1209_remove_all_adjacent_duplicates_in_string_ii.cc)


#0150_evaluate_reverse_polish_notation
#0224_basic_calculator
#0227_basic_calculator_ii
#0241_different_ways_to_add_parentheses
#2019_the_score_of_students_solving_math_expression
#0282_expression_add_operators