project(stack)

add_executable(0225 0225_implement_stack_using_queues.cc)
add_executable(0232 0232_implement_queue_using_stacks.cc)

add_executable(0020 0020_valid_parentheses.cc)

add_executable(1047 1047_remove_all_adjacent_duplicates_in_string.cc)
add_executable(1209 1209_remove_all_adjacent_duplicates_in_string_ii.cc)

add_executable(0150 0150_evaluate_reverse_polish_notation.cc)
add_executable(0224 0224_basic_calculator.cc)
add_executable(0227 0227_basic_calculator_ii.cc)
#0241_different_ways_to_add_parentheses
#0282_expression_add_operators
#2019_the_score_of_students_solving_math_expression

add_executable(0239 0239_sliding_window_maximum.cc)
add_executable(0347 0347_top_k_frequent_elements.cc)


add_executable(0739 0739_daily_temperatures.cc)      # 简单题(栈 单调栈)
add_executable(0496 0496_next_greater_element_i.cc)  # 简单题(栈 单调栈)
add_executable(0503 0503_next_greater_element_ii.cc) # 简单题(栈 单调栈)
add_executable(0042 0042_trapping_rain_water.cc)     # 简单题(栈 单调栈)