project(tree)

add_executable(0700 0700_search_in_a_binary_search_tree.cc)

add_executable(1376 1376_time_needed_to_inform_all_employees.cc) # (简单题 树/图 DFS)
#104. Maximum Depth of Binary Tree
#124. Binary Tree Maximum Path Sum

add_executable(0530 0530_minimum_absolute_difference_in_bst.cc) # (中序遍历)
add_executable(1161 1161_maximum_level_sum_of_a_binary_tree.cc) # (BFS/层次遍历)
