project(tree)

add_executable(0700 0700_search_in_a_binary_search_tree.cc)

add_executable(1376 1376_time_needed_to_inform_all_employees.cc) # (简单题 树/图 DFS)
#104. Maximum Depth of Binary Tree
#124. Binary Tree Maximum Path Sum

add_executable(0530 0530_minimum_absolute_difference_in_bst.cc) # (中序遍历)
add_executable(1161 1161_maximum_level_sum_of_a_binary_tree.cc) # (BFS/层次遍历)
add_executable(1569 1569_number_of_ways_to_reorder_array_to_get_same_bst.cc) # (难题 分治 杨辉三角 组合数)
#2019. The Score of Students Solving Math Expression
#1185. Day of the Week
#2172. Maximum AND Sum of Array