project(two_pointer)

#add_executable(0027 0027_remove_element.cc)
#add_executable(0026 0026_remove_duplicates_from_sorted_array.cc)
#add_executable(0283 0283_move_zeroes.cc)
#add_executable(0844 0844_backspace_string_compare.cc)
#add_executable(0977 0977_squares_of_a_sorted_array.cc)
#add_executable(0121 0121_best_time_to_buy_and_sell_stock.cc)