project(two_pointer)

# set from https://programmercarl.com
add_executable(0027 0027_remove_element.cc)
add_executable(0026 0026_remove_duplicates_from_sorted_array.cc)
add_executable(0283 0283_move_zeroes.cc)
add_executable(0844 0844_backspace_string_compare.cc)
add_executable(0977 0977_squares_of_a_sorted_array.cc)

# random problem
add_executable(0121 0121_best_time_to_buy_and_sell_stock.cc)
add_executable(0031 0031_next_permutation.cc)


add_executable(1498 1498_number_of_subsequences_that_satisfy_the_given_sum_condition.cc)  # 难题(双指针 子序列, 快速幂)
#2438. Range Product Queries of Powers
#2467. Most Profitable Path in a Tree
#251. Flatten 2D Vector
